Add newe class all-buttons

--- a/counter/counter.html
+++ b/counter/counter.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <label for="count" id="countLabel">0</label>
-    <button id="decrease-button">DECREASE</button>
-    <button id="reset-button">RESET</button>
-    <button id="increase-button">INCREASE</button>
+    <div class="all-buttons">
+        <button id="decrease-button">DECREASE</button>
+        <button id="reset-button">RESET</button>
+        <button id="increase-button">INCREASE</button>
+    </div>
     <script src="counter.js"></script>
 </body>
 </html>
