Add button and label

--- a/tips/test.html
+++ b/tips/test.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <label for="myCheckBox">SUBSCRIBE</label>
+    <input type="checkbox" id="myCheckBox">
+    <button id="button">SUBMIT</button>
     <script src="if.js"></script>
 </body>
 </html>
