Add radio button

--- a/tips/if.html
+++ b/tips/if.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <label for="myCheckBox">SUBSCRIBE</label>
-    <input type="checkbox" id="myCheckBox">
+    <input type="checkbox" id="myCheckBox"><br>
+    <label for="visaBtn">Visa</label>
+    <input  type="radio" name="card" id="visaBtn">
+    <label for="masterBtn">MasterCard</label>
+    <input  type="radio" name="card" id="masterBtn">
+    <label for="paypalBtn">PayPal</label>
+    <input  type="radio" name="card" id="paypalBtn"><br>
     <button id="button">SUBMIT</button>
     <script src="if.js"></script>
 </body>
