--- a/counter/counter.html
+++ b/counter/counter.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="counter.css">
-    <title>Counter Program</title>
-</head>
-<body>
-    <label for="count" id="countLabel">0</label>
-    <div class="all-buttons">
-        <button id="decrease-button">DECREASE</button>
-        <button id="reset-button">RESET</button>
-        <button id="increase-button">INCREASE</button>
-    </div>
-    <script src="counter.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="counter.css" />
+		<title>Counter Program</title>
+	</head>
+	<body>
+		<label for="count" id="countLabel">0</label>
+		<div class="all-buttons">
+			<button id="decrease-button">DECREASE</button>
+			<button id="reset-button">RESET</button>
+			<button id="increase-button">INCREASE</button>
+		</div>
+		<script src="counter.js"></script>
+	</body>
 </html>
