--- a/tips/if.html
+++ b/tips/if.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <label for="myCheckBox">SUBSCRIBE</label>
-    <input type="checkbox" id="myCheckBox"><br>
-    <label for="visaBtn">Visa</label>
-    <input  type="radio" name="card" id="visaBtn">
-    <label for="masterBtn">MasterCard</label>
-    <input  type="radio" name="card" id="masterBtn">
-    <label for="paypalBtn">PayPal</label>
-    <input  type="radio" name="card" id="paypalBtn"><br>
-    <button id="button">SUBMIT</button>
-    <script src="if.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<label for="myCheckBox">SUBSCRIBE</label>
+		<input type="checkbox" id="myCheckBox" /><br />
+		<label for="visaBtn">Visa</label>
+		<input type="radio" name="card" id="visaBtn" />
+		<label for="masterBtn">MasterCard</label>
+		<input type="radio" name="card" id="masterBtn" />
+		<label for="paypalBtn">PayPal</label>
+		<input type="radio" name="card" id="paypalBtn" /><br />
+		<button id="button">SUBMIT</button>
+		<script src="if.js"></script>
+	</body>
 </html>
